@@ -8,6 +8,7 @@
 ///    - [yy]: Minor version with non-breaking API and library changes
 ///    - [zz]: Bug fix version with no direct changes to API
 ///
+/// - 2020/04/06 (4.01.10) - Fix bug: Do not use pool before checking for NULL
 /// - 2020/03/22 (4.01.9) - Fix bug where layout state wasn't restored correctly after
 ///                        popping a tree.
 /// - 2020/03/11 (4.01.8) - Fix bug where padding is subtracted from widget
